created the controller, api specification for gameweek
