# swagger/v1/swagger.yaml
@@ -1344,7 +1344,7 @@ paths:
                   error:
                     type: string
 
-  /v1/users/{user_id}/player_injuries/{id}:
+  /api/v1/users/{user_id}/player_injuries/{id}:
     get:
       summary: Get player injury by ID
       description: Retrieves a specific player injury by its ID.
@@ -1446,7 +1446,7 @@ paths:
         '404':
           description: Player injury not found
 
-  /v1/users/{user_id}/stadiums:
+  /api/v1/users/{user_id}/stadiums:
     get:
       summary: Get all stadiums for a specific user
       description: Get all stadiums 
@@ -1506,7 +1506,7 @@ paths:
                     items:
                       type: string
 
-  /v1/users/{user_id}/stadiums/{id}:
+  /api/v1/users/{user_id}/stadiums/{id}:
     get:
       summary: Get a specific stadium by ID
       description: Retrieve a specific statdium by ID for a User
@@ -1627,7 +1627,7 @@ paths:
                     type: string
                     example: "Stadium not found"
     
-  /v1/users/{user_id}/managers:
+  /api/v1/users/{user_id}/managers:
     get:
       summary: Get all managers for a specific user
       description: Retrieve all managers associated with a user.
@@ -1687,7 +1687,7 @@ paths:
                     items:
                       type: string
 
-  /v1/users/{user_id}/managers/{id}:
+  /api/v1/users/{user_id}/managers/{id}:
     get:
       summary: Get a specific manager by ID
       description: Retrieve a specific manager by ID for a User
@@ -1807,7 +1807,7 @@ paths:
                     type: string
                     example: "Manager not found"  
 
-  /v1/users/{user_id}/seasons:
+  /api/v1/users/{user_id}/seasons:
     get:
       summary: Get all seasons for a user
       description: Retrieve all seasons associated with a specific user.
@@ -1867,7 +1867,7 @@ paths:
                     items:
                       type: string
 
-  /v1/users/{user_id}/seasons/{id}:
+  /api/v1/users/{user_id}/seasons/{id}:
     get:
       summary: Get a specific season by ID
       description: Retrieve details of a specific season by its ID for a user.
@@ -1988,7 +1988,7 @@ paths:
                     example: "Season not found!"
 
 
-  /v1/users/{user_id}/managers:
+  /api/v1/users/{user_id}/managers:
     get:
       summary: Get all managers for a user
       description: Retrieve all managers associated with a specific user.
@@ -2048,7 +2048,7 @@ paths:
                     items:
                       type: string
 
-  /v1/users/{user_id}/managers/{id}:
+  /api/v1/users/{user_id}/managers/{id}:
 
     get:
       summary: Get a specific manager by ID
@@ -2169,7 +2169,7 @@ paths:
                     type: string
                     example: "Manager not found!"
 
-  /v1/users/{user_id}/season_managers:
+  /api/v1/users/{user_id}/season_managers:
     get:
       summary: Get all season managers for a user
       description: Retrieve all season managers associated with a specific user.
@@ -2229,7 +2229,7 @@ paths:
                     items:
                       type: string
 
-  /v1/users/{user_id}/season_managers/{id}:
+  /api/v1/users/{user_id}/season_managers/{id}:
     get:
       summary: Get a specific season manager by ID
       description: Retrieve details of a specific season manager by its ID for a user.
@@ -2349,6 +2349,185 @@ paths:
                     type: string
                     example: "Season Manager not found!"
     
+  /api/v1/users/{user_id}/game_weeks:
+    get:
+      summary: Get all game weeks for a user
+      description: Retrieve all game weeks associated with a specific user.
+      tags:
+        - GameWeeks
+      parameters:
+        - name: user_id
+          in: path
+          required: true
+          description: The ID of the user.
+          schema:
+            type: integer
+      responses:
+        '200':
+          description: Successful response
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/GameWeek'
+
+    post:
+      summary: Create a new game week for a user
+      description: Create a new game week associated with a specific user and season.
+      tags:
+        - GameWeeks
+      parameters:
+        - name: user_id
+          in: path
+          required: true
+          description: The ID of the user.
+          schema:
+            type: integer
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/NewGameWeek'
+      responses:
+        '201':
+          description: Game Week created successfully
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/GameWeek'
+        '422':
+          description: Validation error
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  errors:
+                    type: array
+                    items:
+                      type: string
+
+  /api/v1/users/{user_id}/game_weeks/{id}:
+    get:
+      summary: Get a specific game week by ID
+      description: Retrieve details of a specific game week by its ID for a user.
+      tags:
+        - GameWeeks
+      parameters:
+        - name: user_id
+          in: path
+          required: true
+          description: The ID of the user.
+          schema:
+            type: integer
+        - name: id
+          in: path
+          required: true
+          description: The ID of the game week.
+          schema:
+            type: integer
+      responses:
+        '200':
+          description: Successful response
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/GameWeek'
+        '404':
+          description: Game Week not found
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  error:
+                    type: string
+                    example: "Game Week not found!"
+
+    patch:
+      summary: Update a specific game week by ID
+      description: Modify details of a specific game week by its ID for a user.
+      tags:
+        - GameWeeks
+      parameters:
+        - name: user_id
+          in: path
+          required: true
+          description: The ID of the user.
+          schema:
+            type: integer
+        - name: id
+          in: path
+          required: true
+          description: The ID of the game week.
+          schema:
+            type: integer
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/NewGameWeek'
+      responses:
+        '200':
+          description: Game Week updated successfully
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/GameWeek'
+        '422':
+          description: Validation error
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  errors:
+                    type: array
+                    items:
+                      type: string
+
+    delete:
+      summary: Delete a specific game week by ID
+      description: Remove a game week by its ID for a user.
+      tags:
+        - GameWeeks
+      parameters:
+        - name: user_id
+          in: path
+          required: true
+          description: The ID of the user.
+          schema:
+            type: integer
+        - name: id
+          in: path
+          required: true
+          description: The ID of the game week.
+          schema:
+            type: integer
+      responses:
+        '200':
+          description: Game Week deleted successfully
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  message:
+                    type: string
+                    example: "Game Week deleted successfully!"
+        '404':
+          description: Game Week not found
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  error:
+                    type: string
+                    example: "Game Week not found!"
 
 components:
   schemas:
